--- a/pikademia/Strona_www/index.html
+++ b/pikademia/Strona_www/index.html
@@ -2,10 +2,38 @@
 <html lang="pl" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pierwsza stona www</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
-
+    <header>
+      <a href="index.html" id="logolink"><img src="images/Logo.png" alt="Logo.png"></a>
+      <hr>
+      <nav class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="index.html">Usługi</a>
+        <a href="index.html">O nas</a>
+        <a href="index.html">Kontakt</a>
+        <a href="javascript:void(0)" class="mobMenuIcon" onclick="myFunction()"><span class="material-icons">
+menu
+</span>
+</a>
+      </nav>
+    </header>
+    <script type="text/javascript">
+      function myFunction(){
+        var x = document.getElementById('myTopnav');
+        if (x.className === 'topnav'){
+          x.className += ' responsive';
+        }
+        else {
+          x.className = 'topnav';
+        }
+      }
+    </script>
   </body>
+
 </html>
