--- a/pikademia/Strona_www/index.html
+++ b/pikademia/Strona_www/index.html
@@ -17,12 +17,16 @@
         <a href="index.html">Usługi</a>
         <a href="index.html">O nas</a>
         <a href="index.html">Kontakt</a>
-        <a href="javascript:void(0)" class="mobMenuIcon" onclick="myFunction()"><span class="material-icons">
-menu
-</span>
-</a>
+        <a href="javascript:void(0)" class="mobMenuIcon" onclick="myFunction()"><i class="material-icons">menu</i></a>
       </nav>
     </header>
+    <section class="banner">
+      <div class="container">
+          <h1>Projektowanie stron WWW</h1>
+          <h3>Nasze strony są the best</h3>
+          <a href="index.html" class="bnt">Read more</a>
+      </div>
+    </section>
     <script type="text/javascript">
       function myFunction(){
         var x = document.getElementById('myTopnav');
